# OrbWeaver

./: .gitignore  .tool-versions  BUILD.md  CHRONOLOGICAL_LAYOUT.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  MULTI_TOPIC_IMPLEMENTATION.md  README.md  TIMELINE_GUIDE.md  claude.md  walkthrough.md
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: main.yml  release.yml  rust.yml
Docs/: Architecture.md  Design.md  Frontend.md  FutureDMsAsThreads.md  ImplementationPlan.md  NetworkingPlan.md  Paper1_LudonarrativeAssonanticTracing.md  Paper2_ImplicitBiasAnalysis.md  Paper3_NashEquilibriaMultiAgent.md  PrivacyAndModeration.md  TopicNetworkFlow.md
Docs/p2pchan-examples/: Backend Overview.md  Draft_Post_Implementation.md  Identity_Sidebar_Implementation.md  Post_Layout_Plan.md
Docs/p2pchan-examples/api/: API Overview.md  handlers.md  thread_importer.md
Docs/p2pchan-examples/architecture/: Network Overview.md  friendcode.md  network_connection.md  network_handshake.md  network_incoming.md  network_message.md
Docs/p2pchan-examples/cmd/: main-fe.md
Docs/p2pchan-examples/database/: Database Overview.md  database.md  image_operations.md  operations.md  schema.md
Docs/p2pchan-examples/gui_design/: main_window.md
Docs/p2pchan-examples/networking/: friendcode.md
graphchan_agent/: .gitignore  Cargo.toml  README.md  REFLECTION.md  agent_config.example.toml
graphchan_agent/src/: agent.rs  api_client.md  api_client.rs  character_card.md  character_card.rs  comfy_client.md  comfy_workflow.md  comfyui_client.md  comfyui_client.rs  config.md  config.rs  database.md  database.rs  graphchan_client.md  graphchan_client.rs  llm_client.md  llm_client.rs  main.md  main.rs  models.md  models.rs
graphchan_agent/src/agent/: actions.md  actions.rs  image_gen.md  mod.md  mod.rs  reasoning.md  reasoning.rs  trajectory.md  trajectory.rs
graphchan_agent/src/ui/: app.md  app.rs  avatar.md  character.md  character.rs  chat.md  chat.rs  comfy_settings.md  mod.md  mod.rs  settings.md  settings.rs  sprite.md  sprite.rs
graphchan_backend/: Cargo.toml  check_backend.txt  check_backend_2.txt  check_backend_error.txt  check_backend_final.txt  test.txt
graphchan_backend/src/: api.rs  blocking.rs  bootstrap.rs  cli.rs  config.rs  dms.md  dms.rs  files.rs  identity.rs  importer.rs  lib.rs  main.rs  network.md  network.rs  node.rs  peers.rs  threading.md  threading.rs  utils.rs
graphchan_backend/src/api/: blocking.rs  dms.rs  files.rs  mod.rs  peers.rs  reactions.rs  search.rs  settings.rs  threads.rs
graphchan_backend/src/crypto/: dm_crypto.rs  keys.rs  mod.rs  thread_crypto.rs
graphchan_backend/src/database/: mod.md  mod.rs  models.rs  repositories.rs
graphchan_backend/src/database/repositories/: blocklists.rs  conversations.rs  direct_messages.rs  files.rs  import_post_map.rs  ip_blocks.rs  mod.rs  peer_ips.rs  peers.rs  search.rs  thread_member_keys.rs  threads.rs  topics.rs
graphchan_backend/src/network/: events.md  events.rs  ingest.md  ingest.rs  schelling.md  schelling.rs  topics.rs
graphchan_backend/tests/: rest_api.rs
graphchan_desktop/: Cargo.toml
graphchan_desktop/src/: main.rs
graphchan_frontend/: Cargo.toml  README.md  check_frontend.txt  check_frontend_2.txt  check_frontend_error.txt  check_frontend_error_final_2.txt  check_frontend_final.txt  check_output.txt  check_output_2.txt  check_output_5.txt  check_output_6.txt  check_output_final.txt
graphchan_frontend/src/: api.md  api.rs  app.rs  color_theme.rs  image_loader.rs  importer.md  importer.rs  lib.md  lib.rs  main.rs  models.md  models.rs
graphchan_frontend/src/app/: file_viewer.md  file_viewer.rs  handlers_blocking.md  handlers_blocking.rs  handlers_files.md  handlers_files.rs  handlers_misc.md  handlers_misc.rs  handlers_threads.md  handlers_threads.rs  messages.md  messages.rs  mod.md  mod.rs  spawners.md  spawners.rs  state.md  state.rs  tasks.md  tasks.rs
graphchan_frontend/src/app/ui/: blocking.md  blocking.rs  catalog.md  catalog.rs  chronological.md  chronological.rs  conversations.md  conversations.rs  dialogs.md  dialogs.rs  drawer.md  drawer.rs  friends.md  friends.rs  graph.md  graph.rs  images.md  images.rs  import.md  import.rs  input.md  input.rs  mod.md  mod.rs  node.md  node.rs  radial.md  radial.rs  reaction_colors.md  reaction_colors.rs  search.md  search.rs  settings.md  settings.rs  sugiyama.md  sugiyama.rs  thread.md  thread.rs  topics.md  topics.rs
graphchan_mcp/: Cargo.toml
graphchan_mcp/src/: main.rs
graphchan_ts_frontend/: index.html  package-lock.json  package.json
graphchan_ts_frontend/src/: App.tsx  index.css
graphchan_ts_frontend/src/api/: client.ts  types.ts
graphchan_ts_frontend/src/components/: Layout.css  Layout.tsx  Post.css  Post.tsx  ThreadGraph.tsx  ThreadTimeline.css  ThreadTimeline.tsx
graphchan_ts_frontend/src/pages/: CreateThread.css  CreateThread.tsx  Dashboard.css  Dashboard.tsx  Identity.css  Identity.tsx  ImportThread.css  ImportThread.tsx  Placeholder.tsx  ThreadList.css  ThreadList.tsx  ThreadView.css  ThreadView.tsx
scripts/: README.md  patch_deps.sh
skills/graphchan/: SKILL.md
