[package]
name = "graphchan_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
shell-words = "1.1"
infer = "0.15"
iroh-base = { version = "0.94.1", features = ["key"] }
iroh = "0.94.0"
iroh-relay = "0.94.0"
iroh-blobs = "0.96.0"
iroh-gossip = "0.94.0"
rand = { version = "0.9", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
blake3 = "1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots"] }
