[package]
name = "graphchan_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
html2text = "0.4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
eframe = { version = "0.27", features = ["glow"] }
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
open = "5"
poll-promise = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.8"

[dev-dependencies]
pretty_assertions = "1"
