[package]
name = "graphchan_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
html2text = "0.4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
eframe = { version = "0.29", features = ["glow", "persistence"] }
egui_extras = { version = "0.29", features = ["image"] }
egui-video = "0.9"
egui_commonmark = "0.18"
sdl2 = { version = "0.37", features = ["static-link"] }
ffmpeg-the-third = { version = "2.0", features = ["static", "build"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
open = "5"
poll-promise = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "multipart", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.8"
rfd = "0.14"
rodio = "0.18.1"

[dev-dependencies]
pretty_assertions = "1"
