[package]
name = "graphchan_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
graphchan_frontend = { path = "../graphchan_frontend" } # To reuse models if possible, or just redefine
